fix: let imgs scroll off screen on <lg-sized devices.

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -26,6 +26,11 @@ aside {
 .fixed-attachment {
   background-attachment: fixed;
 }
+@media (max-width: 1024px) {
+  .fixed-attachment {
+    background-attachment: scroll;
+  }
+}
 
 /* NAVBAR */
 .navbar {
